--- a/corpus/src/clang/build
+++ b/corpus/src/clang/build
@@ -8,12 +8,16 @@ arch=(
 )
 
 declare -A opts=(
+    ["O0"]="-O0"
+    ["O1"]="-O1"
     ["O2"]="-O2"
     ["O3"]="-O3"
+    ["Of"]="-Ofast"
     ["Os"]="-Os"
+    ["Og"]="-Og"
     ["debug"]="-g"
     ["static"]="-static"
-    ["static-pie"]="-static-pie"
+    # ["static-pie"]="-static-pie"
 )
 
 loop_dirs make_all clang clang++
