Update clang configs

--- a/corpus/src/clang/build
+++ b/corpus/src/clang/build
@@ -12,7 +12,7 @@ declare -A opts=(
     ["O1"]="-O1"
     ["O2"]="-O2"
     ["O3"]="-O3"
-    ["Of"]="-Ofast"
+    ["Of"]="-O3 -ffast-math"
     ["Os"]="-Os"
     ["Og"]="-Og"
     ["debug"]="-g"
