Add more dotnet build configs

--- a/corpus/src/dotnet/build
+++ b/corpus/src/dotnet/build
@@ -12,6 +12,7 @@ declare -A opts=(
     ["debug"]="-c Debug"
     ["release"]="-c Release"
     ["static"]="-c Release --self-contained true"
+    ["sf"]="-c Release -p:PublishSingleFile=true"
     ["static-sf"]="-c Release -p:PublishSingleFile=true --self-contained true"
 )
 
