Ensure all dotnet examples are published in nativeaot deployment by default

--- a/corpus/src/dotnet/web-blazor/web-blazor.csproj
+++ b/corpus/src/dotnet/web-blazor/web-blazor.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>web-blazor</RootNamespace>
     <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
+    <PublishAot>true</PublishAot>
   </PropertyGroup>
 
 </Project>
