--- a/corpus/src/graalvm/build
+++ b/corpus/src/graalvm/build
@@ -13,9 +13,10 @@ declare -A opts=(
     ["O2"]="-O2"
     ["O3"]="-O3"
     ["Os"]="-Os"
+    ["debug"]="-g -O0" 
     ["prof"]="-g -H:+UnlockExperimentalVMOptions -H:-DeleteLocalSymbols -H:-RemoveUnusedSymbols -H:+SourceLevelDebug -H:+InternalSymbolsAreGlobal -H:+PreserveFramePointer"
-    ["static"]="--static --libc=musl"
-    ["static-nolibc"]="--static-nolibc"
+    # ["static"]="--static --libc=musl"
+    # ["static-nolibc"]="--static-nolibc"
 )
 
 if [ ! -d "$GRAALVM_HOME" ] || [ ! -f "$GRAALVM_HOME/bin/native-image" ]; then
